Arceen: Fortune and Random header not showing fix

--- a/src/styles/pages/activities/RandomQuote.css
+++ b/src/styles/pages/activities/RandomQuote.css
@@ -1,31 +1,34 @@
 .rquote-content {
-    margin: 10px;
-    font-style: italic;
-    padding: 10px;
-    font-family: "Fira Code Light";
+  margin: 10px;
+  font-style: italic;
+  padding: 10px;
+  font-family: "Fira Code Light";
 }
 
+.rquote-root {
+  margin-top: 60px;
+}
 .rquote-quote {
-    font-size: 50px;
-    margin: 10px;
+  font-size: 50px;
+  margin: 10px;
 }
 
 .rquote-author {
-    font-size: 25px;
-    margin: 10px;
+  font-size: 25px;
+  margin: 10px;
 }
 
 .rquote-button {
-    font-size: 23px;
-    background: white;
-    border-radius: 10px;
-    padding: 10px;
-    margin: 10px;
-    transition-duration: 300ms;
+  font-size: 23px;
+  background: white;
+  border-radius: 10px;
+  padding: 10px;
+  margin: 10px;
+  transition-duration: 300ms;
 }
 
 .rquote-button:hover {
-    cursor: pointer;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    background: #c9c9c9;
+  cursor: pointer;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  background: #c9c9c9;
 }
